--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+/* @import url('scss/colorOverride.scss'); */
 
 * {
     margin: 0;
@@ -21,7 +22,6 @@ html {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: blue;
 }
 
 .home_header,
@@ -93,24 +93,20 @@ html {
         height: 79px;
     }
 
-    a {
+    a:not(.plus) {
         display: flex;
         flex-direction: column;
         border: none;
         background-color: #FCFCFC;
         align-items: center;
         width: 100%;
-
-
-        &:not(.plus) {
-            justify-content: center;
-        }
+        justify-content: center;
 
         &:not(.selected) {
             color: #C6C6C6;
         }
 
-        &:active:not(.plus) {
+        &:active {
             background-color: #c6c6c647;
         }
     }
@@ -135,21 +131,58 @@ html {
 
 .plus {
     display: flex;
-    justify-content: top;
+    border: none;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
 
-    > div {
+    .btn {
         display: flex;
-        width: calc(56px + 8px);
-        height: calc(56px + 8px);
+        flex-direction: row;
+        width: 64px !important;
+        height: 64px !important;
         background-color: #7F3DFF;
-        justify-content: center;
-        align-items: center;
         border-radius: 50%;
-        position: center;
-    }
+        border: none;
+        color: #7F3DFF;
+        font-size: 32px;
 
-    div:active {
-        background-color: #C6C6C6;
+        &:defined {
+            background-color: #7F3DFF;
+        }
+
+        &:active {
+            background-color: #5529aa;
+        }
+
+        &:hover {
+            background-color: #5529aa;
+        }
+
+        &:focus:active {
+            background-color: #2a1455;
+        }
+    }
+}
+
+.popover-body {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+
+    > a {
+        display: flex;
+        flex-direction: row;
+        width: 40px;
+        height: 40px;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        border: none;
+        font-size: 32px;
     }
 }
 
@@ -218,9 +251,6 @@ html {
             font-weight: 600;
             white-space: nowrap;
             text-overflow: ellipsis;
-            /* align-self: center; */
-            /* width: 100%; */
-            /* height: 100%; */
             font-size: large;
         }
 
@@ -341,22 +371,30 @@ html {
             color: #292B2D;
             font-weight: 500;
             text-align: left;
-            
+
             padding: 10px;
         }
     }
 }
 
-.btn-primary {
+[class$="-primary"] {
     background-color: #7F3DFF;
+    color: #FCFCFC;
     border: none;
 }
 
-.btn-primary:hover {
-    background-color: #5529aa;
+[class$="-primary"]:hover {
+    background-color: #5529aa !important;
 }
 
-.btn-primary:focus:active {
-    background-color: #2a1455;
+[class$="primary"]:focus {
+    background-color: #2a1455 !important;
 }
 
+[class$="primary"]:hover {
+    background-color: #5529aa !important;
+}
+
+[class$="primary"]:focus:active {
+    background-color: #2a1455 !important;
+}
