--- a/client/css/addNewWallets.css
+++ b/client/css/addNewWallets.css
@@ -1,135 +1,155 @@
 body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    height: 100%;
-    background-color: #7F3DFF; 
-    display: flex;
-    justify-content: flex-end; 
-    align-items: center;
-    flex-direction: column;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  height: 100%;
+  background-color: #7F3DFF; 
+  display: flex;
+  justify-content: flex-end; 
+  align-items: center;
+  flex-direction: column;
+}
 
-  .header {
-    position: absolute;
-    top: 20px;
-    left: 10px;
-    display: flex;
-    align-items: center;
-    width: 100%;
-  }
+.header {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
 
-  .arrow-back {
-    width: 24px;
-    height: 24px;
-    cursor: pointer;
-    background-image: url('../images/back.png'); 
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: transparent; 
-    border: none; 
-    padding: 0; 
-    display: inline-block; 
+.arrow-back {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  background-image: url('../images/back.png'); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent; 
+  border: none; 
+  padding: 0; 
+  display: inline-block; 
 }
 .arrow-back:focus {
-    outline: none; 
+  outline: none; 
 }
 
-  .title {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    margin: 0 auto;
-    flex-grow: 1;
-  }
+.title {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto;
+  flex-grow: 1;
+}
 
-  .balance-container {
-    width: 90%;
-    max-width: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 10px; 
-  }
+.balance-container {
+  width: 90%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 10px; 
+}
 
-  .balance {
-    color: white;
-    font-size: 14px;
-    text-align: left;
-    margin-bottom: 5px;
-  }
+.balance {
+  color: white;
+  font-size: 14px;
+  text-align: left;
+  margin-bottom: 5px;
+}
 
-  .amount-input {
-    color: white;
-    font-size: 48px;
-    font-weight: bold;
-    background-color: transparent;
-    border: none;
-    width: 100%;
-  }
+.amount-input {
+  color: white;
+  font-size: 48px;
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+  width: 100%;
+}
 
-  .amount-input:focus {
-    outline: none;
-  }
+.amount-input:focus {
+  outline: none;
+}
 
-  .container {
-    width: 90%;
-    max-width: 400px;
-    background-color: #fff;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-    margin-bottom: 0 px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
-  }
+.container {
+  width: 90%;
+  max-width: 400px;
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  margin-bottom: 0px;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+}
 
-  select {
-    width: 100%;
-    padding: 15px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
-  }
+input[type="text"], input[type="email"], input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  background-color: #F8F8F8;
+  color: #333;
+  transition: all 0.3s ease;
+}
 
-  select {
-    appearance: none;
-    background-image: url('data:image/svg+xml;utf8,<svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5H7z" fill="rgba(0, 0, 0, 0.54)"/></svg>');
-    background-repeat: no-repeat;
-    background-position-x: calc(100% - 10px);
-    background-position-y: 50%;
-  }
+input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
+  border-color: #7F3DFF;
+  outline: none;
+  box-shadow: 0px 0px 10px rgba(127, 61, 255, 0.2);
+  background-color: #fff;
+}
 
-  select::-ms-expand {
-    display: none;
-  }
+select {
+  width: 100%;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
 
-  select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
+select {
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5H7z" fill="rgba(0, 0, 0, 0.54)"/></svg>');
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 10px);
+  background-position-y: 50%;
+}
 
-  .button {
-    display: block;
-    width: 100%;
-    padding: 15px;
-    background-color: #7F3DFF;
-    color: white;
-    text-align: center;
-    border-radius: 10px;
-    font-size: 18px;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    margin-top: 20px;
-  }
+select::-ms-expand {
+  display: none;
+}
 
-  .button:hover {
-    background-color: #6B31CC;
-  }
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  background-color: #7F3DFF;
+  color: white;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.button:hover {
+  background-color: #6B31CC;
+}
