--- a/client/css/style.css
+++ b/client/css/style.css
@@ -61,13 +61,13 @@ html {
 }
 
 .notification_bell_icon {
-    background-image: url('./images/notification_bell_icon.svg');
+    background-image: url('../images/notification_bell_icon.svg');
     width: 21px;
     height: 25px;
 }
 
 #plus_icon {
-    background-image: url('./images/plus_icon.svg');
+    background-image: url('../images/plus_icon.svg');
     background-position: center;
     width: 27px;
     height: 27px;
@@ -213,13 +213,13 @@ html {
 }
 
 .income_icon {
-    background-image: url('./images/income_icon.svg');
+    background-image: url('../images/income_icon.svg');
     width: 24px;
     height: 28px;
 }
 
 .expense_icon {
-    background-image: url('./images/expense_icon.svg');
+    background-image: url('../images/expense_icon.svg');
     width: 24px;
     height: 28px;
 }
